@@ -3,8 +3,10 @@
 ################################################################################
 
 1.0.2  -> 1.0.3
+ - Repeat step 3 in the installation manual.
  - Replace ioFTPD\scripts\nxLib.tcl and all Tcl files in ioFTPD\scripts\nxTools\.
  - Replace the nxHelper.dll and tclsqlite3.dll files in ioFTPD\system\.
+ - Copy the Search.* template files to ioFTPD\scripts\nxTools\text\.
 
 1.0.1  -> 1.0.2
  - Replace ioFTPD\scripts\nxLib.tcl and all Tcl files in ioFTPD\scripts\nxTools\.
